Added tests and turned functions into members

--- a/FTrie.Tests/FTrie.Tests.fsproj
+++ b/FTrie.Tests/FTrie.Tests.fsproj
@@ -51,7 +51,11 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Content Include="packages.config" />
-    <Compile Include="GetWordsUnderStringTests.fs" />
+    <Compile Include="GetWordsPrefixedByTests.fs" />
+    <Compile Include="WithWordTests.fs" />
+    <Compile Include="GetWordsTests.fs" />
+    <Compile Include="IsPrefixTests.fs" />
+    <Compile Include="ContainsTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
